[package]
name = "had_coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.2.1"
chrono = "0.4.22"
sha256 = "1.0.3"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
reqwest = "0.11.12"
uuid ={version = "1.1.2", features=["v4",  # Lets you generate random UUIDs
    "fast-rng",                            # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics"]}